Add authentication. Add authentication middleware and adjust Swagger. Add rate limit, logger and cache (via Redis) middlewares. Code refactoring.
